--- a/src/app/community/tour-review/tour-review.component.html
+++ b/src/app/community/tour-review/tour-review.component.html
@@ -5,7 +5,7 @@
       </h1>
       <ul>
           <li class="allNotice on"><a href="/review">여행 후기</a></li>
-          <li><a href="#">여행 계획</a></li>
+          <li><a href="/tourplan">여행 계획</a></li>
           <li class=""><a href="#">동행인 구하기</a></li>
           <li><a href="/tips">여행 Tip</a></li>
       </ul>
