--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,11 +8,11 @@
         </div>
         <!-- loginArea : 로그인 전 -->
         <div class="loginArea" style="width: 125px;">
-          <a href="#">로그인</a> <span>|</span> <a href="#">회원가입</a>
+          <a href="/login">로그인</a> <span>|</span> <a href="/signup">회원가입</a>
         </div>
         <div id="search">
           <form method="get"
-            action="http://www.tourtips.com/ap/search/search/">
+            action="#">
             <fieldset>
               <legend>검색</legend>
               <span class="round"> <input type="text" name="cseq"
@@ -37,7 +37,7 @@
             <li><a href="#">커뮤니티</a>
               <ul>
                 <li><a href="/review">여행 후기</a></li>
-                <li><a href="#">여행 계획</a></li>
+                <li><a href="/tourplan">여행 계획</a></li>
                 <li><a href="#">동행인 구하기</a></li>
                 <li><a href="/tips">여행 Tip</a></li>
               </ul></li>
