--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -1,16 +1,3 @@
-html {
-  height: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  min-height: 100%;
-  background: #F1F1F1;
-}
 
 /* Animation Keyframes */
 @keyframes scale_header {
@@ -37,19 +24,21 @@ body {
 
 /* Login Form */
 .login-container {
+  margin: auto;
   display: flex;
+  text-align: center;
   flex-direction: column;
   align-items: center;
   position: relative;
   width: 340px;
   height: auto;
-  padding: 5px;
+  padding: 20px;
   box-sizing: border-box;
 }
 
-.login-container img {
-  width: 200px;
-  margin: 0 0 20px 0;
+.login-container label{
+color: rgb(53, 7, 1);
+padding-top: 30px;
 }
 
 .login-container p {
@@ -162,7 +151,7 @@ body {
 
 .login-input:focus {
   outline: none;
-  border-bottom: 2px solid #E37F00;
+  border-bottom: 2px solid rgb(129, 173, 6);
 }
 
 
@@ -185,7 +174,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 0.9rem;
   font-weight: 500;
-  color: #E37F00;
+  color: rgb(13, 124, 197);
   cursor: pointer;
   opacity: 1;
   animation: input_opacity 0.8s cubic-bezier(.55, 0, .1, 1);
@@ -244,5 +233,4 @@ button.social-signin.twitter {
 button.social-signin.google {
   background: #DD4B39;
 }
-
 
