--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,25 +1,22 @@
+<div id="subWrap">
 <div class="login-container">
   <section class="login" id="login">
-    <header>
-      <h2>Application Name</h2>
-      <h4>Login</h4>
-    </header>
+    <label>
+      <h2>Login</h2>
+    </label>
     <form class="login-form" action="#" method="post">
       <input type="text" class="login-input" placeholder="User" required autofocus/>
       <input type="password" class="login-input" placeholder="Password" required/>
       <div class="center">
           <span class="loginwith">Sign in with social network</span>
-          
-          <button class="social-signin facebook">Log in with facebook</button><br>
-          <button class="social-signin twitter">Log in with Twitter</button><br>
+          <button type="button"><img src="./naver-green.png" alt="naverLogin"></button><br>
           <button class="social-signin google">Log in with Google+</button>
           
         </div>
       <div class="submit-container">
-        
-        <button type="submit" class="login-button">SIGN IN</button>
+        <button type="submit" class="login-button"><b>SIGN IN</b></button>
       </div>
     </form>
-  </section>
-  
+  </section> 
+</div>
 </div>
