--- a/src/app/community/company/company.component.html
+++ b/src/app/community/company/company.component.html
@@ -5,8 +5,8 @@
   </h1>
   <ul>
       <li><a href="/review">여행 후기</a></li>
-      <li  class="allNotice on"><a href="/tourPlan">여행 계획</a></li>
-      <li><a href="/company">동행인 구하기</a></li>
+      <li><a href="/tourplan">여행 계획</a></li>
+      <li  class="allNotice on"><a href="/company">동행인 구하기</a></li>
       <li><a href="/tips">여행 Tip</a></li>
   </ul>
 
@@ -16,9 +16,9 @@
  
   <!-- //lnb -->
   <div class="contents">
-    <h2>여행 계획</h2>
+    <h2>동행인 구하기</h2>
     <br>
-        <table class="plansTable">
+        <table class="companyTable">
           <colgroup>
             <col style="width:10%">
             <col style="width:25%">
@@ -45,7 +45,7 @@
         <br>
   
         <div class="col text-right">
-        <button type="button" class="btn btn-outline-danger" onclick="location.href='/planWrite'">글쓰기</button>
+        <button type="button" class="btn btn-outline-danger" onclick="location.href='/findCompany'">글쓰기</button>
       </div>
         </div>
   </div>
