--- a/src/app/notice/notice-board/notice-board.component.html
+++ b/src/app/notice/notice-board/notice-board.component.html
@@ -13,6 +13,8 @@
      </div>
       <!-- //lnb -->
       <div class="contents">
+        <h2>공지사항</h2>
+        <br>
 		        <table class="noticeTable">
               <colgroup>
                 <col style="width:10%">
