--- a/src/app/tourInfo/search-video/search.component.html
+++ b/src/app/tourInfo/search-video/search.component.html
@@ -13,6 +13,9 @@
       </div>    
       <!-- //lnb -->
       <div class="contents">
+        <h2>Youtube검색</h2>
+        <hr class="one">
+        <br>
 		        검색어 : <input type="text" [(ngModel)]="searchWord" style="width:250px; height:30px ;">&nbsp;
             <button (click)="search()" style="height:30px ;" class="btn btn-outline-secondary">검색</button>
 							<table *ngFor="let sc of scList" class="videoTable"> 
