--- a/src/app/community/company/company.component.css
+++ b/src/app/community/company/company.component.css
@@ -1,8 +1,8 @@
 .contents h2{
     font-size: 30px;
-    color: rgb(61, 60, 60);
+    color: black;
 }
-.tipsTable{
+.companyTable{
     border-top: 1px solid rgb(194, 100, 38);
     border-collapse: collapse;
     border-spacing: 25px;
