--- a/src/app/community/tour-plan/tour-plan.component.css
+++ b/src/app/community/tour-plan/tour-plan.component.css
@@ -1,3 +1,8 @@
+.contents h2{
+    font-size: 30px;
+    color: black;
+}
+
 .plansTable{
     border-top: 1px solid rgb(194, 100, 38);
     border-collapse: collapse;
