--- a/src/app/community/tour-review/review-write/review-write.component.html
+++ b/src/app/community/tour-review/review-write/review-write.component.html
@@ -1,13 +1,13 @@
   <div id="subWrap">
          <div class="lnb" >
         <h1 class="bigTitle">
-          <a href="#">커뮤니티</a>
+          <a href="/review">커뮤니티</a>
         </h1>
         <ul>
-          <li  class="allNotice on"><a href="review">여행 후기</a></li>
-          <li><a href="/tourplan">여행 계획</a></li>
-          <li class=""><a href="#">동행인 구하기</a></li>
-          <li class=""><a href="/tips">여행 Tip</a></li>
+          <li  class="allNotice on"><a href="/review">여행 후기</a></li>
+          <li><a href="/tourPlan">여행 계획</a></li>
+          <li><a href="/company">동행인 구하기</a></li>
+          <li><a href="/tips">여행 Tip</a></li>
         </ul>
 
   
