--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,8 +6,7 @@
   <title>Swiper demo</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Nanum+Gothic+Coding|Nanum+Myeongjo:400,700|Poor+Story|Roboto+Mono:400,500,700|Roboto+Slab|Source+Sans+Pro|Sunflower:300|Ubuntu&display=swap" rel="stylesheet">
-</head>
+  </head>
 
 <body>
   <div id="subWrap">
@@ -16,22 +15,28 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100" width="380" height="420"
-            src="https://post-phinf.pstatic.net/MjAxNzEwMDVfNTMg/MDAxNTA3MTk4MDAyMzcy.NTmzjTg3ygEXUiCLO48a8x1NPNqJmDIsdL9G_fjOFlEg.FQQEMx5_3XBee0vfCBcYg1W_yNyZYDmg1p08RjOSBoMg.JPEG/001.JPG?type=w1200"
+            src="https://blog.allstay.kr/wp-content/uploads/2018/07/%EB%A9%95%EC%8B%9C%EC%BD%94-%EC%97%AC%ED%96%89-%EB%A9%95%EC%8B%9C%EC%BD%94%EC%8B%9C%ED%8B%B0-%EC%A0%84%EA%B2%BD.jpg"
             alt="First slide">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" width="380" height="420"
-            src="https://post-phinf.pstatic.net/MjAxNzEwMDVfMTE0/MDAxNTA3MTk4MDAyODM2.fpL5DfzDb2g0MsCI5O2mgKd0BOMr7EDkvK3VL2l01mwg.vwLi7noxakCBH92ri9o0QtIJ73i0L29pBmJftZVBOvog.JPEG/002.JPG?type=w1200"
+            src="https://steemitimages.com/0x0/http://cfile2.uf.tistory.com/image/2216EF46561B4E17063352"
             alt="Second slide">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" width="380" height="420"
-            src="https://post-phinf.pstatic.net/MjAxNzEwMDVfMzQg/MDAxNTA3MTk4MDAzMDA5.Hb4sfvSezujO-lgf0IOywymK4jOBOkGLCq51Ni06tU0g.Y0UIpQpy0lgwxt5y-2lWnKBsFiCSCpFqvBCS1CZS2kwg.JPEG/021.JPG?type=w1200"
+            src="https://c.wallhere.com/photos/96/55/1280x800_px_Grand_Canal_Italy_Venice-550538.jpg!d"
             alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" width="380" height="420"
+            src="http://www.asiacenews.com/news/photo/201602/1816_1663_450.png"
+            alt="Foruth slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -46,27 +51,27 @@
 
 
   <div class="about_area">
-    <h2>인기 여행지!!
+    <h2>국내 추천 여행지
     <br></h2>
     <div class="about_box">
       <ul class="place_list box_inner clear">
-        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height(300));$('.contact_pop').show();">
-            <img class="rounded" src="../assets/imgs/tripgam.png" >
-            <h3>일단 로고</h3>
+        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
+            <img class="rounded" width="360" height="220" src="http://www.jejuive.com/data/cheditor4/1702/b5e25d483825d2760fcb42a770bdbad4_1487313524.42.jpg" >
+            <h3>제주도-유채꽃밭</h3>
             <p class="txt">일단 로고를 넣어 봅미다.</p>
             <span class="view">View</span>
           </a>
         </li>
-        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
-            <img class="rounded" src="../assets/imgs/tripgam.png">
-            <h3>일단 로고</h3>
+        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.space_pop').show();">
+            <img class="rounded" width="360" height="220" src="http://www.thebay101.com/wp-content/uploads/2014/09/%EB%B6%80%EC%82%B0%EC%9D%B8%ED%84%B0%EB%84%B7%EB%89%B4%EC%8A%A4-7%EC%9B%9431%EC%9D%BC01.jpg">
+            <h3>부산-해운대</h3>
             <p class="txt">일단 로고를 넣어 봅미다.</p>
             <span class="view">View</span>
           </a>
         </li>
-        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
-            <img class="rounded" src="../assets/imgs/tripgam.png">
-            <h3>일단 로고</h3>
+        <li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.program_pop').show();">
+            <img class="rounded" width="360" height="220" src="http://blogfiles.naver.net/MjAxODExMDlfMjgg/MDAxNTQxNzQ1NzAwMjU2.Nb9spvjut6QJIBauCkAUMDGl43nhUCggtxm-JuiOX9Ug.G6IQBatJi5qYmbP6Uhan6y-VNnYewlbuYgHXN3fSo2Qg.JPEG.skyjune7458/5_%BC%F8%C3%B5%B8%B8_%BD%C0%C1%F6_%C3%E0%C1%A6_%C4%A5%B0%D4%C6%A2%B1%E8_%B3%A1.jpg">
+            <h3>순천만습지</h3>
             <p class="txt">일단 로고를 넣어 봅미다.</p>
             <span class="view">View</span>
           </a>
@@ -74,92 +79,61 @@
       </ul>
     </div>
   </div>
-
-
-  <footer>
-    <div class="foot_area box_inner">
-      <ul class="foot_list clear">
-        <li><a href=";">이용약관</a></li>
-        <li><a href=";">개인정보 취급 방침</a></li>
-      </ul>
-      <h2>여행감(Go Trip!)</h2>
-      <p class="addr">가산디지털단지 제이플라츠 5층
-        <span class="gubun">/</span>
-        <span class="br_line">대표전화
-          <span class="space0">010-2923-0112</span>
-          <span class="gubun">/</span>
-          <span class="br_line">E-mail :
-            <span class="space0">leesoobin@naver.com</span>
-          </span>
-        </span>
-      </p>
-      <p class="copy box_inner">Copyright(c) GoTrip</p>
-      <ul class="snslink clear">
-        <li><a href="">blog</a></li>
-      </ul>
-    </div>
-  </footer>
-  </div>
-  <div style="height: 300px;"></div>
-  <a href="#layer1" class="btn-example">일반 팝업레이어</a>
-  <div id="layer1" class="pop-layer">
-      <div class="pop-container">
-          <div class="pop-conts">
-              <!--content //-->
-              <p class="ctxt mb20">Thank you.<br>
-                  Your registration was submitted successfully.<br>
-                  Selected invitees will be notified by e-mail on JANUARY 24th.<br><br>
-                  Hope to see you soon!
-              </p>
-  
-              <div class="btn-r">
-                  <a href="#" class="btn-layerClose">Close</a>
-              </div>
-              <!--// content-->
+<div class="popup_base contact_pop">
+  <div class="pop_content">
+    <p class="btn_xpop">
+      <button onclick="$(this).parent().parent().parent().hide();">close</button></p>
+      <ul class="pop_list">
+        <li>
+          <h2 class="tit_pop">제주도 그리고 유채꽃</h2>
+          <img class="rounded" width="400" height="280" src="http://blogfiles.naver.net/MjAxNzAyMTBfMjc0/MDAxNDg2Njg5NjI1NzIw.Hq3vH6Px1WPAG-_S8r0aFLPkbGk1-KVzr84fkQZXPxog.toZB510GlCvG4pVP5ef6jRZkGS7148nNtXX6XvgKYX8g.JPEG.ssmileshin/20158298-.jpg" alt="제주도-유채꽃밭"/>
+          <div class="pop_txt">
+            <p>제주도하면 떠오르는 유채꽃! 유채꽃은 3월~4월에 절정을 이룹니다.<br>
+            유채꽃을 가장 예쁘게 감상할 수 있는 추천 명소!<br>
+            1. 산방산 일대 <br>
+            2. 녹산로 <br>
+            3. 우도
+            </p>
           </div>
-      </div>
+        </li>
+      </ul>
   </div>
-  <br/><br/>
-<script>
-
-$('.btn-example').click(function(){
-        var $href = $(this).attr('href');
-        layer_popup($href);
-    });
-    function layer_popup(el){
-
-        var $el = $(el);        //레이어의 id를 $el 변수에 저장
-        var isDim = $el.prev().hasClass('dimBg');   //dimmed 레이어를 감지하기 위한 boolean 변수
-
-        isDim ? $('.dim-layer').fadeIn() : $el.fadeIn();
-
-        var $elWidth = ~~($el.outerWidth()),
-            $elHeight = ~~($el.outerHeight()),
-            docWidth = $(document).width(),
-            docHeight = $(document).height();
-
-        // 화면의 중앙에 레이어를 띄운다.
-        if ($elHeight < docHeight || $elWidth < docWidth) {
-            $el.css({
-                marginTop: -$elHeight /2,
-                marginLeft: -$elWidth/2
-            })
-        } else {
-            $el.css({top: 0, left: 0});
-        }
-
-        $el.find('a.btn-layerClose').click(function(){
-            isDim ? $('.dim-layer').fadeOut() : $el.fadeOut(); // 닫기 버튼을 클릭하면 레이어가 닫힌다.
-            return false;
-        });
-
-        $('.layer .dimBg').click(function(){
-            $('.dim-layer').fadeOut();
-            return false;
-        });
-
-    }
-</script>
+</div>
+<div class="popup_base space_pop">
+  <div class="pop_content">
+    <p class="btn_xpop">
+      <button onclick="$(this).parent().parent().parent().hide();">close</button></p>
+      <ul class="pop_list">
+        <li>
+          <h2 class="tit_pop">바다와 야경</h2>
+          <img class="pop_img" width="360" height="220" src="http://www.seriinn.com/wp-content/uploads/2014/10/%ED%95%B4%EC%9A%B4%EB%8C%801.jpg" alt="해운대"/>
+          <div class="pop_txt">
+            <p>해운대는 멋있는 야경으로 유명합니다 <br>
+            해운대 야행을 즐길 수 있는 추천 코스!<br>
+            1. 더베이 101 & 등대전망대 & 옛 동백섬 선착장<br>
+            2. 요트 타고 즐기는 야경
+            </p>
+          </div>
+        </li>
+      </ul>
+  </div>
+</div>
+<div class="popup_base program_pop">
+  <div class="pop_content">
+    <p class="btn_xpop">
+      <button onclick="$(this).parent().parent().parent().hide();">close</button></p>
+      <ul class="pop_list">
+        <li>
+          <h2 class="tit_pop">순천만습지</h2>
+          <img class="pop_img" width="360" height="220" src="https://support.visitkorea.or.kr/img/call?cmd=VIEW&id=08f44a7e-b6f7-4d15-a412-657fbdb8380e" alt="순천만"/>
+          <div class="pop_txt">
+            <p>되나여</p>
+          </div>
+        </li>
+      </ul>
+  </div>
+</div>
+</div>
 </body>
 
 </html>
