--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
       <!-- headTop -->
       <div class="headTop">
         <div class="logo"> <a href="/"> 
-          <img src="../assets/imgs/tripgam.png" alt="여행감">
+          <img src="../assets/imgs/logo3.png" alt="여행감" width="300px">
         </a>
         </div>
         <!-- loginArea : 로그인 전 -->
@@ -28,17 +28,17 @@
       </div>
       <div class="menubar">
           <ul>
-            <li><a id="current">여행정보</a>
+            <li><a>여행정보</a>
               <ul>
                 <li><a href="/search">Youtube검색</a></li>
                 <li><a href="/bsearch">Blog검색</a></li>
                 <li><a href="/checkList">Check List</a></li>
               </ul></li>
-            <li><a href="#">커뮤니티</a>
+            <li><a>커뮤니티</a>
               <ul>
                 <li><a href="/review">여행 후기</a></li>
-                <li><a href="/tourplan">여행 계획</a></li>
-                <li><a href="#">동행인 구하기</a></li>
+                <li><a href="/tourPlan">여행 계획</a></li>
+                <li><a href="/company">동행인 구하기</a></li>
                 <li><a href="/tips">여행 Tip</a></li>
               </ul></li>
             <li><a>호텔</a>
