--- a/src/app/notice/notice-board/notice-board.component.css
+++ b/src/app/notice/notice-board/notice-board.component.css
@@ -1,3 +1,7 @@
+.contents h2{
+    font-size: 30px;
+    color: black;
+}
 #container{
     margin-top: 20px;
 }
@@ -31,17 +35,20 @@ btn{
 .modal {
     text-align: center;
     position: fixed;
-    margin-top: 5%;
+    margin-top: 10%;
+   
 }
 .modal-dialog.modal-80size {
     width: 80%;
     height: 80%;
     margin: 0;
     padding: 0;
+    z-index: -9999;
   }
   
   .modal-content.modal-80size {
     height: auto;
     min-height: 80%;
+    z-index: -9999;
   }
 
