--- a/src/app/tourInfo/search-blog/search-blog.component.html
+++ b/src/app/tourInfo/search-blog/search-blog.component.html
@@ -15,6 +15,8 @@
       <!-- //lnb -->
      
       <div class="contents">
+        <h2>Blog 검색</h2>
+        <br>
           검색어 : <input type="text" [(ngModel)]="searchWord" style="width:250px; height:30px ;"> &nbsp;
           <button (click)="nsearch()" style="height:30px ;" class="btn btn-outline-secondary">검색</button>
           <br><br>
