--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,7 @@ input[type="tel"]{
 
 /* header */
 #header{z-index:9999;position:relative;height:188px;}
-#header .headTop{position:relative;width:1090px;height:130px;margin:0 auto;}
+#header .headTop{position:relative;width:1090px;height:180px;margin:0 auto;}
 #header .headTop .logo{position:absolute;top:0;left:50%;display:block;width:304px;height:100%;margin-left:-152px;}
 #header .headTop .logo a{display:block;width:100%;height:100%;font:normal 0/0 arial;text-align:center;}
 #header .headTop .logo a:hover{color:#232323;}
@@ -138,7 +138,7 @@ input[type="tel"]{
 .more{position:absolute;top:3px;right:0;text-align:right;color:#898989;font-size:12px;}
 
 /* subWrap */
-#subWrap{position:relative;width:1090px;height:100%;margin:0 auto;*zoom:1;}
+#subWrap{position:relative;width:1090px;padding-top:40px;;margin:auto;*zoom:1;}
 #subWrap:after{content:'';display:block;clear:both;}
 #subWrap.wide{width:100%;}
 #subWrap.wide #contentWrap{width:1090px;margin:0 auto;}
