--- a/src/app/community/company/company.component.html
+++ b/src/app/community/company/company.component.html
@@ -35,7 +35,7 @@
           </tr>
           <tr>
             <td>테스트</td>
-            <td>테스트테스트테테테스트</td>
+            <td><a href="/company/detail">테스트테스트테테테스트</a></td>
             <td>테스트</td>
             <td>테스트</td>
             <td>테스트</td>
