--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -46,9 +46,9 @@
                 <li><a href="/hotel">추천 숙박</a></li>
               </ul></li>
               <li><a href="/noticeboard">공지사항</a></li>
-            <li><a href="#">마이페이지</a>
+            <li><a>마이페이지</a>
               <ul>
-                <li><a href="#">내 작성글 보기</a></li>
+                <li><a href="/mypage">내 작성글 보기</a></li>
                 <li><a href="#">회원 정보 수정</a></li>
               </ul></li>
           </ul>
