--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -51,7 +51,7 @@
           <br>
           <div class="control-group">
               <!-- tel -->
-              <label class="control-label col-sm-11" style="text-align: left;" for="email"><b>휴대전화</b></label>
+              <label class="control-label col-sm-11" style="text-align: left;" for="cellphone"><b>휴대전화</b></label>
               <div class="controls">
                 <input type="tel" id="phone" name="phone" style="text-align: center;" placeholder="Phone number" class="input-xlarge" [(ngModel)]="user.userTel">
               </div>
