--- a/src/app/community/tour-plan/plan-write/plan-write.component.html
+++ b/src/app/community/tour-plan/plan-write/plan-write.component.html
@@ -4,8 +4,8 @@
    <a href="/review">커뮤니티</a>
  </h1>
  <ul>
-   <li  class="allNotice on"><a href="/review">여행 후기</a></li>
-   <li><a href="/tourPlan">여행 계획</a></li>
+   <li><a href="/review">여행 후기</a></li>
+   <li class="allNotice on"><a href="/tourPlan">여행 계획</a></li>
    <li><a href="/company">동행인 구하기</a></li>
    <li><a href="/tips">여행 Tip</a></li>
  </ul>
@@ -16,25 +16,25 @@
 
 <!-- contents -->
 <div class="contents">
- <h2 class="titleSt02">여행 후기</h2>
- <div class="mb-3">
-     <label for="title">제목</label>
-     <input type="text" class="form-control" name="title" id="title" placeholder="제목을 입력해 주세요">
- </div>
- <div class="mb-3">
-     <label for="reg_id">작성자</label>
-     <input type="text" class="form-control" name="reg_id" id="reg_id" placeholder="이름을 입력해 주세요">
- </div>
- <div class="mb-3"> 
-     <label for="content">내용</label>
- <ckeditor [editor]="Editor" (change)="onChange($event)"></ckeditor>
- </div>
-
- <div class="col text-right">
-   <button type="button" class="btn btn-outline-danger" id="btnSave">저장</button>&nbsp;&nbsp;
-   <button type="button" class="btn btn-outline-danger" id="btnList">목록</button>
-</div>
-</div>
+    <h2 class="titleSt02">여행 후기</h2>
+    <div class="mb-3">
+        <label for="title">제목</label>
+        <input type="text" class="form-control" name="title" id="title" placeholder="제목을 입력해 주세요">
+    </div>
+    <div class="mb-3">
+        <label for="reg_id">작성자</label>
+        <input type="text" class="form-control" name="reg_id" id="reg_id" placeholder="이름을 입력해 주세요">
+    </div>
+    <div class="mb-3"> 
+        <label for="content">내용</label>
+    <ckeditor [editor]="Editor" (change)="onChange($event)"></ckeditor>
+    </div>
+  
+    <div class="col text-right">
+      <button type="button" class="btn btn-outline-danger" id="btnSave">저장</button>&nbsp;&nbsp;
+      <button type="button" class="btn btn-outline-danger" id="btnList">목록</button>
+  </div>
+  </div>
 </div>
 
 
